--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">
+        <div class="sidebar sidebargo">
             <nav>
                 <ul>
                     <li>Home</li>
-                    <li>My Intro</li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li>Services</li>
                     <li>CV</li>
                     <li>Blog</li>
@@ -21,6 +21,10 @@
             </nav>
         </div>
         <div class="main">
+            <div class="threedot">
+                <img src="Images/ham.png" class="ham" alt="" width="23px">
+            <img src="Images/cross.png" class="cross" alt="" width="23px">
+            </div>
             <div class="infoConatiner">
                 <div class="devInfo">
                     <div class="hello">Hi I am</div>
@@ -37,5 +41,6 @@
         </div>
 
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
